--- a/drush_extensions.make.yml
+++ b/drush_extensions.make.yml
@@ -6,5 +6,5 @@ projects:
     type: module
     download:
       type: git
-      branch: 7.x-1.x
+      branch: "7.x-1.x"
       url: 'https://github.com/AmazeeLabs/drush_deploy.git'
